# python-jobsearch

./: .gitignore  README.md  main.py  pyproject.toml
jobsearch/: dataaccess.py  jobs.py  remoteok.py
