[tool.poetry]
name = "jobsearch"
version = "0.1.0"
description = ""
authors = ["Petr Stribny <petrstribny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.0"
typer = "^0.3.2"
rich = "^9.8.1"
httpx = "^0.16.1"
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
